--- a/week1/day2-python-basics.ipynb
+++ b/week1/day2-python-basics.ipynb
@@ -2,25 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
+   "id": "124ff27a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25]\n",
+      "{2: 4, 3: 9, 4: 16, 5: 25, 6: 36, 7: 49}\n"
+     ]
+    }
+   ],
+   "source": [
+    "square = [x**2 for x in range(1,6)]\n",
+    "\n",
+    "print(square)\n",
+    "\n",
+    "square_dict = {x:x**2 for x in range(2,8)}\n",
+    "\n",
+    "print(square_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "id": "e3845abf",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "Dog.__init__() missing 1 required positional argument: 'name'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[22]\u001b[39m\u001b[32m, line 12\u001b[39m\n\u001b[32m      9\u001b[39m         \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m     10\u001b[39m             \u001b[38;5;28mprint\u001b[39m( \u001b[38;5;28mself\u001b[39m.__name,\u001b[33m\"\u001b[39m\u001b[33mbarks like \u001b[39m\u001b[33m\"\u001b[39m, \u001b[38;5;28mself\u001b[39m.__b)\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m doggie = \u001b[43mDog\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     14\u001b[39m \u001b[38;5;28mprint\u001b[39m(doggie.bark())\n",
-      "\u001b[31mTypeError\u001b[39m: Dog.__init__() missing 1 required positional argument: 'name'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "barks like  Woof Woof\n",
+      "None\n"
      ]
     }
    ],
    "source": [
     "class Dog:\n",
-    "    def __init__(self,name:str | None = None):\n",
+    "    def __init__(self,name = None):\n",
     "        self.__name = name\n",
     "        self.__b = \"Woof Woof\"\n",
     "        \n",
